refactor(auth): 重构认证服务提升登录流程和连接端点管理
- 重构登录流程为三步：认证、生成认证信息、获取连接端点
- 优化连接端点获取策略，按broker分组实现负载均衡
- 使用Optional优化用户信息获取逻辑
- 改进JWT Token刷新机制，增强异常处理
- 优化二维码登录流程的状态管理和凭证生成
- 更新Redis序列化配置，提升多态类型处理兼容性
- 重构Netty认证处理器，支持多种协议和设备类型
- 新增Channel清理辅助类，优化连接管理
- 改进日志输出和错误处理机制
- 移除过期的导入和注释代码
- 优化认证处理器的协议解析和Token提取逻辑